@@ -1,6 +1,11 @@
 v3.7.1-rc.1 (XXXX-XX-XX)
 ------------------------
 
+* Fix invalid calls to `AgencyCommResult::slice()` method, which must only be
+  made in case of an agency result was retrieved successfully. In case the call
+  to the agency was not successful, `slice()` must not be called on it. This
+  change makes sure this invariant holds true.
+
 * Fix potential AQL query shutdown hanger.
 
 * Modified the exception handling in the RestHandler. Asynchronous communication
